# plasma-panel-colorizer

./: .clang-format  .editorconfig  .env  .gitignore  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  compile_commands.json  fix-presets-widget-rules.sh  gen-preset-previews-doc.sh  install-immutable.sh  install-plugin-immutable.sh  install-plugin.sh  install.sh  kpac  package-plasmoid.sh  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: merge-translations.yml  release-please.yml
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: CompactRepresentation.qml  ConfiguringIndicator.qml  CustomBorder.qml  DBusFallback.qml  DBusMethodCall.qml  DBusPrimary.qml  DBusServiceModel.qml  DBusSignalMonitor.qml  Enums.qml  ImageRoundedRectangle.qml  RectangularGrid.qml  RunCommand.qml  TasksModel.qml  TrayIconReplacementsModel.qml  WindowModel.qml  colorCompTest.qml  configAppearance.qml  configBlacklistWidgets.qml  configForeground.qml  configGeneral.qml  configGlobal.qml  configGlobalWidgetOverrides.qml  configHideWidgets.qml  configLayout.qml  configNew.qml  configNewPanel.qml  configNewTray.qml  configNewWidget.qml  configPanelBg.qml  configPerWidget.qml  configPresetAutoload.qml  configPresetWidgetOverrides.qml  configPresets.qml  configStockPanelSettings.qml  configSupportMe.qml  configTextIconFix.qml  configTrayIconsReplacer.qml  configUnified.qml  configUnifiedBackground.qml  configUserWidgetOverrides.qml  (+6 more)
package/contents/ui/code/: enum.js  globals.js  statusNotifierItemIconHashes.js  statusNotifierItemIconRules.js  utils.js  version.js
package/contents/ui/components/: Background.qml  CategoryDisabled.qml  ColorButton.qml  ColorEffect.qml  ColorPickerGradientList.qml  ColorPickerList.qml  ColoredButton.qml  Colors.qml  CustomBackground.qml  CustomBorder.qml  DesktopView.qml  DoubleSpinBox.qml  DoubleSpinBoxCompat.qml  FontFamilyChooser.qml  FormBorder.qml  FormColors.qml  FormPadding.qml  FormPerWidgetSettings.qml  FormShadow.qml  FormShape.qml  FormWidgetSettings.qml  GradientRoundedRectangle.qml  Header.qml  MaskEffect.qml  PanelElementHint.qml  PlasmoidIcon.qml  PopupView.qml  PresetAutoLoadingHint.qml  RepaintDebug.qml  Scheme.qml  SettingImportExport.qml  SpinBoxDecimal.qml  SupportMe.qml  ValueMouseControl.qml  WidgetCardBlacklist.qml  WidgetCardCheck.qml  WidgetCardConfig.qml  WidgetCardHide.qml  WidgetCardOverride.qml  WidgetCardTextIconFixes.qml  (+6 more)
package/contents/ui/presets/: README.md
package/contents/ui/presets/Black/: settings.json
package/contents/ui/presets/Black Color Lines/: settings.json
package/contents/ui/presets/Black Gray Lines/: settings.json
package/contents/ui/presets/Bliss/: settings.json
package/contents/ui/presets/Bliss Light/: settings.json
package/contents/ui/presets/Blur Widgets/: settings.json
package/contents/ui/presets/Blur Widgets 2/: settings.json
package/contents/ui/presets/Carbon/: settings.json
package/contents/ui/presets/ChromeOS/: settings.json
package/contents/ui/presets/Default/: settings.json
package/contents/ui/presets/Dock/: settings.json
package/contents/ui/presets/Eclipse/: settings.json
package/contents/ui/presets/Fake Floating/: settings.json
package/contents/ui/presets/Fusion 2/: settings.json
package/contents/ui/presets/Fusion 3/: settings.json
package/contents/ui/shaders/: badge.frag.qsb
package/contents/ui/tools/: gdbus_get_signal.sh  list_presets.sh  service.py
package/translate/: ReadMe.md  ca.po  de.po  es.po  fi.po  hu.po  nl.po  pl.po  ru.po  template.pot  tr.po  uk.po  zh.po  zh_TW.po
plugin/: CMakeLists.txt  panelcolorizer.cpp  panelcolorizer.h  panelcolorizerplugin.cpp  qmldir
shaders/: badge.frag
(+23 files in other folders)
